[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["zovt <zovt@posteo.de>"]

[[bin]]
name = "day1-1"
path = "src/day1/one.rs"

[[bin]]
name = "day1-2"
path = "src/day1/two.rs"

[[bin]]
name = "day2-1"
path = "src/day2/one.rs"

[[bin]]
name = "day2-2"
path = "src/day2/two.rs"

[dependencies]
